# robotic-arm-atom

./: .gitignore  CMakeLists.txt  Dockerfile  Files.md  README.md  build_image.sh  build_image_test.sh  package.xml  requirements.txt  ros_service.ino  run_image.sh  run_image_test.sh  scripts_arduino_serial.py
Models/: flipkart grid.dae  flyer.dae  medium_box.dae  small_box.dae  trolley.dae
Perception/: package.xml
Perception/scripts/: percepStack.py  yolov8_segmentation.py
ajgar/: CMakeLists.txt  package.xml
ajgar/MASTER_PKG/: Master_Script.py
ajgar/action/: JointStateController.action
ajgar/config/: joint_names_robot_arm_urdf.yaml  joint_trajectory_controller.yaml
ajgar/launch/: arm_urdf.launch  controller.launch  controller.yaml  display.launch  gazebo.launch  urdf.rviz
ajgar/meshes/: KINECT_XBOX.stl  arm_1.stl  base_top.stl  elbow.stl  end.stl  shoulder.stl  shoulder_1.stl  suction.stl  suction_1.stl  wrist.stl
ajgar/scripts/: arm_gp_JointStateTrajectory.py  arm_planing.py  final_controller_code_3.ino  gripper_gp_JointStateTrajectory.py  joint_state_publish.py  master_script.py  motion_planing.py  moveit_arm_trajectory.py  serial_pub.py  test.py  voxelRemove.py
ajgar/srv/: bool_service.srv
ajgar/urdf/: URDF_Test_3.gazebo  URDF_Test_3.trans  URDF_Test_3.xacro  ajgar_URDF.gazebo  ajgar_URDF.trans  ajgar_URDF.xacro  materials.xacro
ajgar_core/: CMakeLists.txt  package.xml
ajgar_core/launch/: ajgar_moveit.launch  ajgar_rosservice.launch  ur5_moveit.launch
ajgar_core/scripts/: ajgar.xacro  arm.urdf  attach.py  automate_attach_detach.py  detach.py  master_node.py  motionPlanning.py  moveit.py  new_ik_solver.py  teleop_node.py  test_moveit.py
ajgar_core/scripts/test files/: motion_planing.py
ajgar_core/srv/: tfValueSrv.srv
ajgar_description/: CMakeLists.txt  package.xml
ajgar_description/config/: joint_trajectory_controller.yaml
ajgar_description/launch/: display.launch  gazebo.launch
ajgar_description/meshes/: base_link.stl  base_top.stl  elbow.stl  end.stl  shoulder.stl  suction.stl  wrist.stl
ajgar_description/urdf/: ajgar.gazebo  ajgar.trans  ajgar.xacro
ajgar_moveit_config/: .setup_assistant  CMakeLists.txt  custom_map.bt  package.xml  scene.scene
ajgar_moveit_config/config/: ajgar.srdf  fake_controllers.yaml  gazebo_ajgar.urdf  joint_limits.yaml  kinect_config.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
ajgar_moveit_config/launch/: ajgar_sim.launch  chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml
ajgar_moveit_config/worlds/: world.launch  world.world
ajgar_perception/: CMakeLists.txt  package.xml
ajgar_perception/scripts/: centroi_normal.cpp  client.py  filterOctomap.py  pcl_converter.cpp  percepStack.py  percepStack_Copy.py  server.py  test.py
ajgar_perception/src/: boundaries.cpp  boundary.cpp  centroid_normal.cpp  filter.cpp  octomapFilter.cpp  server.cpp  surface_detection.py
ajgar_perception/srv/: normalSrv.srv  normalsSrv.srv  octomapSrv.srv  percepSrv.srv
ajgar_sim/: CMakeLists.txt  package.xml
ajgar_sim/launch/: ajgar_sim.launch  freenect.launch  ur5_sim.launch
ajgar_sim/models/flyer_boxes/meshes/: flyer.dae
ajgar_sim/models/medium_boxes/: model.config
ajgar_sim/models/trolley/: model.config  model.sdf
ajgar_sim/models/trolley_base/: model.config
ajgar_sim/models/trolley_base/meshes/: trolley_base.dae
ajgar_sim/worlds/: testworld.world  world.launch  world.world
ajgar_sim_plugins/plugin_collision_publish/: CMakeLists.txt  package.xml
ajgar_sim_plugins/plugin_collision_publish/plugin_pneumatic_gripper/: CMakeLists.txt
ajgar_sim_plugins/plugin_collision_publish/plugin_pneumatic_gripper/include/: gazebo_ros_link_attacher.h
ajgar_sim_plugins/plugin_collision_publish/plugin_pneumatic_gripper/scripts/: demo_multiple.py
ajgar_sim_plugins/plugin_collision_publish/plugin_pneumatic_gripper/src/: gazebo_ros_link_attacher.cpp
ajgar_sim_plugins/plugin_collision_publish/src/: plugin_collision_publish.cpp
ajgar_sim_plugins/plugin_pneumatic_gripper/: CMakeLists.txt  package.xml
ajgar_sim_plugins/plugin_pneumatic_gripper/scripts/: attach.py  detach.py  filterTopic.py
ajgar_sim_plugins/plugin_pneumatic_gripper/src/: gazebo_ros_link_attacher.cpp
ajgar_sim_plugins/plugin_pneumatic_gripper/worlds/: test_attacher.world
build_files/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
flipkart_arm/: .setup_assistant  CMakeLists.txt  package.xml
flipkart_arm/config/: fake_controllers.yaml  gazebo_robot_arm_urdf.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robot_arm_urdf.srdf  ros_controllers.yaml  stomp_planning.yaml
flipkart_arm/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  flipkart_arm.launch  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  (+6 more)
moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
nag_raj_description/: CMakeLists.txt  package.xml
nagraj_small_description/: CMakeLists.txt  package.xml
pcl_surface/: CMakeLists.txt
perception/: CMakeLists.txt
plugin_collision_publish/: CMakeLists.txt
plugin_collision_publish/launch/: earthquake.launch
plugin_collision_publish/plugin_pneumatic_gripper/launch/: test_attacher.launch
plugin_collision_publish/plugin_pneumatic_gripper/scripts/: demo.py
scripts/: final_controller_code_2.ino  nema_full.ino  rosserial_pub_script.ino  service_test.py  stepper_code.ino  teleop_2.ino  teleop_arduino.ino  teleop_ros.py
test_description/: CMakeLists.txt  package.xml
trac_ik/: README.md  arm.urdf  ik_solver.py
ur5_description/: CMakeLists.txt  package.xml
ur5_moveit_config/: package.xml  scene.scene
(+275 files in other folders)
