<?xml version="1.0"?>
<package format="2">
  <name>ajgar_sim</name>
  <version>0.0.0</version>
  <description>The ajgar_sim package</description>

  <maintainer email="atom@gmail.com">atom</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export> </export>
</package>
